# FreeDcam

./: .gitignore  .gitmodules  AndroidManifest.xml  Bug Watch Tested Devices  FreeDCamMyUI.apk  FreecamIcons.psd  PythonServerSocket.py  README.md  build.gradle  crosshair2.psd  freecam.xml  gradle.properties  issue_template.md  module_freecam.xml  project.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/com/: ShutterTestClass.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: clipping.fsh  computeAvgLuma.csh  computeClipping.csh  computeFocuspeak.csh  computeHistogram.csh  computeTest.csh  computeWaveform.csh  focuspeak.fsh  focuspeak_sobel.fsh  focuspeak_zebra.fsh  merge.fsh  oes.fsh  oes.vsh  preview.fsh  preview.vsh  supershader.fsh  waveform_rgb.fsh  zebra.fsh  zebramethod.fsh
app/src/main/cpp/LibRaw/: Android.mk
app/src/main/cpp/freedcam/: Android.mk  Application.mk  CustomMatrix.cpp  CustomMatrix.h  DngProfile.cpp  DngProfile.h  DngStacker.cpp  DngTags.h  JniUtils.h  librawutils.cpp
app/src/main/cpp/hl-pipelines/: CMakeLists.txt  deinterleave.cpp  edge_detect.cpp
app/src/main/cpp/tiff/: Android.mk
app/src/main/java/ASUS/: Zenfone6.java
app/src/main/java/Camera2EXT/: Keys.java  OpModes.java
app/src/main/java/camera2_hidden_keys/: AbstractCameraCharacteristics.java  AbstractCaptureRequest.java  AbstractCaptureResult.java  ReflectionHelper.java  VendorKeyParser.java  VendorKeyTestLog.java
app/src/main/java/com/: AbstractFragmentActivity.java
app/src/main/java/freed/: ActivityAbstract.java  ActivityInterface.java  FreedApplication.java  HideNavBarActivity.java  LoggerActivity.java  PermissionActivity.java  SettingsApplication.java
app/src/main/java/hilt/: BitmapHelperEntryPoint.java  BitmapHelperModule.java  CameraApiManagerEntryPoint.java  CameraApiManagerModule.java  CameraFragmentManagerEntryPoint.java  CameraFragmentManagerModule.java  FileListControllerEntryPoint.java  FileListControllerModule.java  HistogramControllerEntryPoint.java  HistogramControllerModel.java  ImageManagerEntryPoint.java  ImageManagerModule.java  KeyPressedControllerModule.java  LocationManagerEntryPoint.java  LocationManagerModule.java  OrientationManagerModule.java  OrientationMangerEntryPoint.java  PagingViewTouchStateModule.java  ParameterModule.java  PermissionManagerEntryPoint.java  PermissionManagerModule.java  PreviewControllerEntryPoint.java  PreviewControllerModule.java  SettingsManagerEntryPoint.java  SettingsModule.java  SoundPlayerEntryPoint.java  SoundPlayerModule.java  ThemeManagerEntryPoint.java  ThemeManagerModule.java  UserMessageHandlerEntryPoint.java  UserMessageHandlerModule.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  RawToDng.cpp  RawToDngbak.cpp  YuvMerge.cpp
app/src/main/jni/LibRaw/: Android.mk
app/src/main/jni/freedcam/: Android.mk  Application.mk  DngMatrixCalc.cpp  DngProfile.cpp  DngProfile.h  DngStacker.cpp  DngTags.h  DngWriter.cpp  DngWriter.h  ExifInfo.cpp  ExifInfo.h  GpsInfo.h  ImageProcessor.cpp  ImageProcessorWrapper.cpp  JniUtils.h  LibRawJniWrapper.cpp  LibRawWrapper.cpp  LibRawWrapper.h  OpCode.h  RawDefs.h  RawStackPipeNative.cpp  RawStackPipeNative.h  RawToDng.cpp  librawutils.cpp  lj92.cpp  lj92.h  swab.h
app/src/main/jni/include/: stage1_align_merge.h  stage1_alignmerge.h  tiffio.h
app/src/main/jni/libFreedcam/: FreeDCam.cpp  FreeDCam.h
app/src/main/jni/libjpeg/: Android.mk
app/src/main/jni/libraw/: Android.mk.bak  swab.h
app/src/main/jni/otherlibs/: Android.mk  ImageProcessor.h  Staxxer.cpp
app/src/main/jni/rawtodng/: RawToDng.cpp
app/src/main/jni/tiff/: Android.mk  SConstruct
app/src/main/res/anim/: bottom_to_top_enter.xml  exit.xml  move_left_to_right.xml  move_right_to_left.xml  top_to_bottom_enter.xml  top_to_bottom_exit.xml
app/src/main/res/drawable/: back_button_press.xml  contshot_start.xml  contshot_stop_normal.xml  delte_button_pressed.xml  ed_picker_background.xml  halfroundbottomcorners.xml  halfroundcorners.xml  halfroundleftcorners.xml  halfroundtopcorners.xml  roundcorners.xml  shutteropenanimation.xml  timepicker_down_btn.xml  timepicker_up_btn.xml  video_recording_stop.xml
app/src/main/res/drawable-hdpi/: Thumbs.db
app/src/main/res/drawable-ldpi/: Thumbs.db
app/src/main/res/drawable-mdpi/: Thumbs.db
app/src/main/res/drawable-nodpi/: Thumbs.db
app/src/main/res/drawable-xhdpi/: Thumbs.db
app/src/main/res/layout/: activity_freedviewer.xml  activity_main.xml  camerafeaturedetector.xml  camerafragment.xml  camerafragment_sonyapi.xml  cameraholder1.xml  cameraholder2.xml  cameraholdersony.xml  cameraui.xml  cameraui_afbracketsettings.xml  cameraui_afbracketsettings_fragment.xml  cameraui_fragment.xml  cameraui_horizontal_values_fragment.xml  cameraui_horizontline.xml  cameraui_info_overlay.xml  cameraui_manual_fragment_rotatingseekbar.xml  cameraui_manualbutton.xml  cameraui_simplevaluechild.xml  cameraui_uisettingschild.xml  curve_view_control.xml  custom_bayer_profile.xml  dngconvertingfragment.xml  dngstackactivity.xml  expandable_childs.xml  expandable_childs_material.xml  expandable_childs_number.xml  expandable_groups.xml  expandable_groups_ambient.xml  expandable_groups_minimal.xml  expandablechildboolean.xml  expandablechildboolean_on_off.xml  (+77 more)
app/src/main/res/layout-xlarge/: activity_main.xml  expandable_childs_number.xml  expandable_groups.xml  expandablechildboolean.xml  guides.xml  main_v2.xml  manual_menu_item.xml  simpel_list_item_v2.xml  toggle_control.xml
app/src/main/rs/: brightness.rs  contrast.rs  focus_peak.rs  focus_peak_cam1.rs  focus_stack.rs  focuspeak_argb.rs  freedcam.rs  imagestack.rs  imagestack_argb.rs  imagestack_rgb_to_argb.rs  interpolateimage2x.rs  rgb_clipping.rs  rgb_focuspeak.rs  rgb_histogram.rs  starfinder.rs
dng/: CMakeLists.txt  build.gradle
dng/src/main/: AndroidManifest.xml
image/: CMakeLists.txt  build.gradle
image/src/main/: AndroidManifest.xml
libraw/: CMakeLists.txt  build.gradle
libraw/src/main/: AndroidManifest.xml
(+4799 files in other folders)
